# claude-code-session-editor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  deploy-site.yml  release.yml
Formula/: cc-session.rb
homebrew/: cc-session.rb
site/: _headers  index.html
src/: app.rs  cli.rs  main.rs  pairing.rs  scan.rs  search.rs  session.rs  tokens.rs
src/cli/: fork.rs
src/io/: atomic.rs  lsof.rs  mod.rs
src/screens/: edit.rs  list.rs  mod.rs
